test/compilable/must_use_not_reserved.d
import core.attribute;

@mustUse int n;
@mustUse alias A = int;
@mustUse template tpl() {}
